fix: spelling mistake, submit bug, login redirect fix: spelling mistake in result page "Congratiolations" to "Congratulations" fix: ability to submit several times on slow connections fix: ability to visit login/register pages with logged in tweak: increase margins in result page for better readability

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -684,14 +684,6 @@ video {
   top: 1.15rem;
 }
 
-.left-1\/2 {
-  left: 50%;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -721,9 +713,9 @@ video {
   margin-right: 0.5rem;
 }
 
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .mx-8 {
@@ -879,16 +871,6 @@ video {
   height: 1.75rem;
 }
 
-.size-9 {
-  width: 2.25rem;
-  height: 2.25rem;
-}
-
-.size-8 {
-  width: 2rem;
-  height: 2rem;
-}
-
 .h-10 {
   height: 2.5rem;
 }
@@ -921,14 +903,6 @@ video {
   height: 100vh;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
 .max-h-0 {
   max-height: 0px;
 }
@@ -943,6 +917,10 @@ video {
 
 .w-1\/3 {
   width: 33.333333%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-14 {
@@ -985,14 +963,6 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
 .min-w-\[300px\] {
   min-width: 300px;
 }
@@ -1023,16 +993,6 @@ video {
 
 .basis-16 {
   flex-basis: 4rem;
-}
-
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -1353,11 +1313,6 @@ video {
 .bg-primary-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(140 0 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-primary-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(163 51 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-primary-900 {
@@ -2224,11 +2179,6 @@ input[type='radio']:checked::before {
   background-color: rgb(252 165 165 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-red-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:text-text-600:hover {
   --tw-text-opacity: 1;
   color: rgb(160 109 197 / var(--tw-text-opacity, 1));
@@ -2298,11 +2248,6 @@ input[type='radio']:checked::before {
 .active\:bg-primary-800:active {
   --tw-bg-opacity: 1;
   background-color: rgb(209 153 255 / var(--tw-bg-opacity, 1));
-}
-
-.active\:bg-red-700:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
 .active\:opacity-95:active {
